Made min res 320px, fixed logo width and nav spacing for mobile

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -81,5 +81,5 @@ $use-errors:		true;
 $use-nav:			true;
 
 /* Variables */
-$min-page-width:	480px;
+$min-page-width:	320px;
 $max-page-width:	1200px;
